Fix dark mode for layout

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -4,25 +4,25 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --background: 35 100% 96%;
+    --foreground: 0 0% 18%;
     --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
+    --card-foreground: 0 0% 18%;
     --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --popover-foreground: 0 0% 18%;
+    --primary: 331 100% 75%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 336 45% 95%;
+    --secondary-foreground: 337 58% 64%;
+    --muted: 336 38% 93%;
+    --muted-foreground: 0 0% 35%;
+    --accent: 336 45% 95%;
+    --accent-foreground: 337 58% 64%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --border: 336 32% 86%;
+    --input: 336 32% 86%;
+    --ring: 331 100% 75%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -30,26 +30,27 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+/* Note that the dark class is just a clone of the root above */
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
+    --background: 35 100% 96%;
+    --foreground: 0 0% 18%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 18%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 18%;
+    --primary: 331 100% 75%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 336 45% 95%;
+    --secondary-foreground: 337 58% 64%;
+    --muted: 336 38% 93%;
+    --muted-foreground: 0 0% 35%;
+    --accent: 336 45% 95%;
+    --accent-foreground: 337 58% 64%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --border: 336 32% 86%;
+    --input: 336 32% 86%;
+    --ring: 331 100% 75%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
@@ -63,6 +64,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-sakura-bg text-sakura-dark;
   }
 }
